syntax = "proto3";

import "google/protobuf/empty.proto";

package proto;

option go_package = "grpc-project/proto";


// Định nghĩa request và response cho lời chào
message HelloRequest {
    string name = 1;
  }


message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc SendHelloMessage (HelloRequest) returns (HelloResponse);
}


message Student {
    string id = 1;
    string name = 2;
    string dateOfBirth = 3;
    string gender = 4;
    string classId = 5;
}

// Định nghĩa request và response cho việc tạo học sinh
message CreateStudentRequest {
    string name   = 1;
	string dateOfBirth = 2;
	string gender = 3;
}

message CreateStudentResponse {
    string message = 1;
}

// Định nghĩa response cho việc lấy danh sách học sinh
message GetAllStudentResponse {
    string message = 1;
    repeated Student students = 2;
}
// Update hoc sinh

message UpdateStudentRequest{
    string id = 1;
    string name = 2;
    string dateOfBirth = 3;
}

message UpdateStudentResponse {
    string message = 1;
}
// Delete hoc sinh
message DeleteStudentRequest{
    string id = 1;
}

message DeleteStudentResponse{
    string message = 1;
}


service StudentService {
    rpc CreateNewStudent (CreateStudentRequest) returns (CreateStudentResponse);
    rpc GetAllStudent (google.protobuf.Empty) returns (GetAllStudentResponse);
    rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentResponse);
    rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentResponse);
}